--- a/css/common.css
+++ b/css/common.css
@@ -34,7 +34,6 @@ body[data-gvik-os='Win'] .gvik-scrobble
     width: 25px;
     height: 16px;
 }
-
 .gvik-scrobble.errors
 {
     color: gray !important;
@@ -91,67 +90,81 @@ body[data-gvik-os='Win'] .gvik-like
 {
     color: #507494;
 }
-#pd.gvik .ac_name {
+#pd.gvik .ac_name
+{
     max-width: calc( 295px - 40px);
 }
-#ac.gvik .ac_name {
+#ac.gvik .ac_name
+{
     max-width: calc( 327px - 40px );
 }
-#pd.gvik.add .ac_name {
+#pd.gvik.add .ac_name
+{
     max-width: calc( 305px - 40px);
 }
-#pd.gvik.no_rec.add .ac_name {
-  max-width: calc( 324px - 40px);
+#pd.gvik.no_rec.add .ac_name
+{
+    max-width: calc( 324px - 40px);
 }
-.font_medium #pd.gvik.add .ac_name {
-  max-width: calc(302px - 40px);
+.font_medium #pd.gvik.add .ac_name
+{
+    max-width: calc(302px - 40px);
 }
-.font_medium #pd.gvik.no_rec.add .ac_name {
-  max-width: calc(321px - 40px);
+.font_medium #pd.gvik.no_rec.add .ac_name
+{
+    max-width: calc(321px - 40px);
 }
-#ac.gvik.add .ac_name {
-max-width: calc( 310px - 40px);
+#ac.gvik.add .ac_name
+{
+    max-width: calc( 310px - 40px);
 }
-#ac.gvik.no_rec .ac_name {
-  max-width: calc( 346px - 40px);
+#ac.gvik.no_rec .ac_name
+{
+    max-width: calc( 346px - 40px);
 }
-.font_medium #ac.gvik.add .ac_name {
-  max-width: calc(307px - 40px);
+.font_medium #ac.gvik.add .ac_name
+{
+    max-width: calc(307px - 40px);
 }
-.font_medium #ac.gvik.no_rec.add .ac_name {
-  max-width: calc( 326px - 40px);
+.font_medium #ac.gvik.no_rec.add .ac_name
+{
+    max-width: calc( 326px - 40px);
 }
-
-#pd.gvik.no_rec .info {
-  width: calc( 453px - 40px );
+#pd.gvik.no_rec .info
+{
+    width: calc( 453px - 40px );
 }
-#pd.gvik.add .info {
-  width: calc( 414px - 40px );
+#pd.gvik.add .info
+{
+    width: calc( 414px - 40px );
 }
-#pd.gvik.no_rec.add .info {
-  width: calc( 433px - 40px );
+#pd.gvik.no_rec.add .info
+{
+    width: calc( 433px - 40px );
 }
-
-#ac.gvik .info, #pd.gvik .info {
-  width:calc(  434px - 40px );
-  margin-left: 10px;
+#ac.gvik .info,
+#pd.gvik .info
+{
+    width: calc(  434px - 40px );
+    margin-left: 10px;
 }
-#ac.gvik.no_rec .info {
-  width:calc(  453px - 40px );
+#ac.gvik.no_rec .info
+{
+    width: calc(  453px - 40px );
 }
-#ac.gvik.add .info {
-  width:calc(  414px - 40px );
+#ac.gvik.add .info
+{
+    width: calc(  414px - 40px );
 }
-#ac.gvik.no_rec.add .info {
-  width:calc(  433px - 40px );
+#ac.gvik.no_rec.add .info
+{
+    width: calc(  433px - 40px );
 }
-
-
 .audio[data-gvik].scrobbled
 {
-    background-color: rgb(255, 242, 189);
-
     font-size: 16px;
+
+    background-color: rgb(255, 242, 189);
 }
 
 /* DOWNLOAD AND BITRATE AUDIO */
@@ -195,14 +208,12 @@ max-width: calc( 310px - 40px);
 {
     padding: 10px 3px 9px;
 }
-
 .audio[data-gvik-download] .actions,
 .audio[data-gvik-bitrate] .actions,
 .audio[data-gvik-bitrate-filesize] .actions
 {
     min-width: 98px;
 }
-
 .gvik-bitrate.loader
 {
     width: 32px;
@@ -217,13 +228,11 @@ max-width: calc( 310px - 40px);
 {
     padding: 0 !important;
 }
-
 #pad_playlist .audio.current .gvik-bitrate,
 #audio.new .audio.current .gvik-bitrate
 {
     color: white;
 }
-
 #pad_playlist .audio[data-gvik-download] .actions,
 #pad_playlist .audio[data-gvik-bitrate] .actions,
 #pad_playlist .audio[data-gvik-bitrate-filesize] .actions
@@ -231,7 +240,6 @@ max-width: calc( 310px - 40px);
     margin: 0;
     padding: 0;
 }
-
 #pad_playlist .audio .gvik-bitrate,
 #pad_playlist .audio .gvik-download
 {
@@ -297,7 +305,6 @@ div[class^=post_media] .audio.current .gvik-download > a > div
     width: 0 !important;
     padding: 0 !important;
 }
-
 .post_media .audio .actions
 {
     visibility: visible !important;
@@ -330,40 +337,25 @@ body[data-gvik-options*='_hide-bit_'] .audio[data-gvik-bitrate] .title_wrap
 {
     width: -webkit-calc(100% - 95px) !important;
 }
-
-
-
 body:not([data-gvik-options*='_hide-bit_']) .audio[data-gvik-bitrate-filesize].over .title_wrap,
 body[data-gvik-options*='_hide-bit_'] .audio[data-gvik-bitrate-filesize] .title_wrap
 {
     width: -webkit-calc(100% - 150px) !important;
 }
-
-
-
 .audio[data-gvik-download] .title_wrap
 {
     width: -webkit-calc(100% - 85px) !important;
 }
-
-
-
 body:not([data-gvik-options*='_hide-bit_']) .audio[data-gvik-bitrate][data-gvik-download].over .title_wrap,
 body[data-gvik-options*='_hide-bit_'] .audio[data-gvik-bitrate][data-gvik-download] .title_wrap
 {
     width: -webkit-calc(100% - 125px) !important;
 }
-
-
-
 body:not([data-gvik-options*='_hide-bit_']) .audio[data-gvik-bitrate-filesize][data-gvik-download].over .title_wrap,
 body[data-gvik-options*='_hide-bit_'] .audio[data-gvik-bitrate-filesize][data-gvik-download] .title_wrap
 {
     width: -webkit-calc(100% - 150px) !important;
 }
-
-
-
 #results .audio  .title_wrap
 {
     max-width: 360px;
@@ -462,17 +454,6 @@ body:not([data-gvik-options*='_heart_']) #pv_hh
     height: 0 !important;
     margin: 0 !important;
 }
-body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
-{
-    font-weight: bold !important;
-
-    float: left !important;
-
-    padding-right: 5px !important;
-    padding-left: 0 !important;
-
-    color: red !important;
-}
 
 /* SIDEBAR */
 #gvik-sidebar
@@ -482,7 +463,7 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
     top: 0;
     right: 0;
 
-    width: 190px;
+     width: 200px;
     /* height: 100%;
     */
     height: auto;
@@ -492,8 +473,9 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
     -webkit-transform: translate3d(100%, 0, 0);
 
     color: rgb(96, 115, 135);
-    border: 1px solid rgb(225, 229, 231);
-    background: #F7F7F7;
+    border-left: 1px solid rgba(100, 100, 100, 0.08);
+    border-bottom: 1px solid rgba(100, 100, 100, 0.08);
+    background: #f7f7f7;
 }
 #gvik-sidebar.large
 {
@@ -521,13 +503,15 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
 
     cursor: pointer;
     -webkit-transform: translate3d(-100%, 0px, 0px);
+
     border: 1px solid rgb(225, 229, 231);
     border-right: 0;
-    background: #F7F7F7;
+    background: #f7f7f7;
 }
 #gvik-sidebar .gvik-switcher.additional
 {
     display: none;
+    position: relative;
 }
 #gvik-sidebar.show .gvik-switcher.additional
 {
@@ -537,25 +521,9 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
 {
     -webkit-transition: -webkit-transform .1s linear, width .1s linear;
 }
-
-.gvik-switcher:after
-{
-    position: absolute;
-
-    width: 20px;
-    height: 100%;
-
-    content: ' ';
-    -webkit-transform: translate3d(-20px, 0, 0);
-}
-
 .gvik-switcher:hover
 {
-     width: 30px;
-}
-.gvik-switcher:before
-{
-    margin-top: 5px;
+    width: 30px;
 }
 #gvik-wrap
 {
@@ -565,7 +533,8 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
     height: auto;
     min-height: 60px;
 
-    background: #F7F7F7 url('chrome-extension://__MSG_@@extension_id__/img/progress.gif') no-repeat 50% 50%;
+
+    background: #f7f7f7 url('chrome-extension://__MSG_@@extension_id__/img/progress.gif') no-repeat 50% 50%;
 }
 #gvik-sidebar.anim .tabCont
 {
@@ -580,18 +549,14 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
     left: 0;
 
     min-height: 65px;
-
+    z-index: 4;
     opacity: 0;
-    background-color: #F7F7F7;
-
+    background-color: #f7f7f7;
 }
-
-
 #gvik-sidebar.anim #gvik-wrap .tabCont.loaded
 {
     -webkit-transition: opacity 400ms ease;
 }
-
 #gvik-wrap .tabCont.loaded
 {
     opacity: 1;
@@ -613,6 +578,7 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
 #gvik-sidebar.min div > .item-cont
 {
     display: flex;
+
     height: 25px;
 }
 #gvik-sidebar div > .item-cont .img-cont
@@ -794,8 +760,8 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
     padding: 0 3px;
 
     cursor: pointer;
-    /*    -webkit-transition: background 500ms ease;
-*/
+    /* -webkit-transition: background 500ms ease;
+    */
 
     color: #2b587a;
     border: 0;
@@ -871,7 +837,6 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
     border-radius: 8px;
     background: #dae1e8;
 }
-
 .gvik-launcher-layer
 {
     position: fixed;
@@ -888,7 +853,6 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
 
     background: transparent;
 }
-
 .gvik-launcher-input-cont
 {
     position: relative;
@@ -904,10 +868,9 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
 {
     display: block;
 }
-
 .gvik-launcher-input
 {
-    font-size: 2em!important;
+    font-size: 2em !important;
 
     width: 470px;
     height: 30px;
@@ -917,7 +880,6 @@ body:not([data-gvik-options*='_mark-red_']) .page_media_poll_desc
     border: 0;
     background: white;
 }
-
 .gvik-launcher-result
 {
     height: auto;
