--- a/css/common.css
+++ b/css/common.css
@@ -35,12 +35,8 @@ body[data-gvik-os='Linux'] .gvik-scrobble
 }
 .gvik-scrobble.errors
 {
-    color: gray !important;
-}
-.gvik-scrobble.errors:after
-{
-    content: '!';
-}
+    color: #C37474 !important; 
+} 
 #gp:not(.head) .wrap.active .gvik-scrobble
 {
     color: rgba(255, 255, 255, .4);
@@ -60,6 +56,8 @@ body[data-gvik-os='Linux'] .gvik-scrobble
 {
     width: 18px;
     height: 10px;
+
+
 
     background-position: 0 -360px;
 }
